@@ -1,4 +1,7 @@
 
+Xael South added support for the Gran-System-S electricity meters!
+Thanks Xael!
+
 Added support for evo868 water meter addon module.
 Added support for whe542 heat cost allocator.
 
